- add node_modules ao gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ nbproject
 # ------------------------------------------------------------------------------------
 #
 # ------------------------------------------------------------------------------------
+
+node_modules
